@@ -108,3 +108,4 @@ For 0.3:
 * Nicolas Maître <nimai@skynet.be>
 * Abhiram <abhiram.ampabathina@gmail.com>
 * Alan Gomes <alangalvino@gmail.com>
+* Stefan Handschuh <https://launchpad.net/~handschuh> (no email provided)
